fix z-index

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -39,6 +39,7 @@
 .top-bar {
   background-color: darkslategray;
   position: fixed;
+  z-index: 1000;
   top:0px;
   left: 0px;
   width: 100%;
